[FEAT](WIP) Sesion y registro de usuarios

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_BACKEND='http://localhost:3001/pgraph'
-TOKEN_SECRET='triunfalnet'
+MONGO_DB_URL=mongodb://localhost:27017/appback
+JWT_SECRET_KEY=TEST@1234
+TOKEN_SECRET=this-is-a-secret-value-with-at-least-32-characters
