--- a/package.json
+++ b/package.json
@@ -45,11 +45,18 @@
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^9.1.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.3.0",
     "jest-enzyme": "^7.1.2",
